data/derived/sp14/progs/unify/prog1363.ml.out
Characters 6-7:
  [5]::[1];;
        ^
Error: This expression has type int but an expression was expected of type
         int list
